cloud/nextcloud-deploy.yml
# cloud/nextcloud-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: nextcloud, namespace: cloud }
spec:
  replicas: 1
  selector: { matchLabels: { app: nextcloud } }
  template:
    metadata: { labels: { app: nextcloud } }
    spec:
      securityContext: { fsGroup: 33 }
      containers:
        - name: nextcloud
          image: nextcloud:29-apache
          ports: [{ containerPort: 80, name: http }]
          volumeMounts: [{ name: nc-data, mountPath: /var/www/html }]
      volumes:
        - name: nc-data
          persistentVolumeClaim: { claimName: nextcloud-data }
