cloud/samba-deploy.yaml
---
# cloud/samba-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: cloud
spec:
  replicas: 1
  selector: { matchLabels: { app: samba } }
  template:
    metadata: { labels: { app: samba } }
    spec:
      nodeSelector:
        kubernetes.io/hostname: "talos-7jb-641"
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: samba
          image: ghcr.io/crazy-max/samba:latest
          volumeMounts:
            - { name: config, mountPath: /data }
            - { name: data,   mountPath: /shares }
          securityContext: { allowPrivilegeEscalation: false }
      volumes:
        - name: config
          configMap: { name: samba-config }
        - name: data
          persistentVolumeClaim: { claimName: pvc-noricam-4tb }
        - name : config
          secret:
            secretName: samba-config
