cloud/nextcloud-ingress.yml
# cloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: cloud
  annotations:
spec:
  ingressClassName: private
  rules:
    - host: nc.noricam.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-svc
                port:
                  number: 80
